--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
+    "sass": "^1.69.0",
     "web-vitals": "^3.5.0"
   },
   "devDependencies": {
